--- a/public/todos.html
+++ b/public/todos.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Todos</h1>
 
-<div ng-controller="myCtrl">
+<div ng-controller="myCtrl as mycl">
     <h1>ADD new todo</h1><br>
     title : <input type="text" id="text4" ng-model="title"><br>
     description: <input type="text" id="text5" ng-model="description"><br>
