Button clear added that we use when we can use when want to add todo.

--- a/public/todos.html
+++ b/public/todos.html
@@ -13,6 +13,7 @@
     title : <input type="text" id="text4" ng-model="mycl.title"><br>
     description: <input type="text" id="text5" ng-model="mycl.description"><br>
     <button type="submit" ng-click="mycl.add();">ADD new todo</button>
+    <button type="submit" ng-click="mycl.clear2();">clear</button>
     <h1>UPDATE new todo </h1><br>
     id: title : <input type="text" ng-model="mycl.idup"><br>
     title : <input type="text" id="text1" ng-model="mycl.titleup"><br>
