--- a/public/todos.html
+++ b/public/todos.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html ng-app="myApp">
-<head>
-    <title>Todo Manager</title>
-</head>
-<body>
-<h1>Todos</h1>
-
-<div ng-controller="myCtrl as mycl">
+<div>
     <h1>logout</h1><br>
     <button type="submit" ng-click="mycl.logout();">logout</button>
     <h1>ADD new todo</h1><br>
@@ -32,10 +24,3 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="/lib/angular/angular.js"></script>
-<script type="text/javascript" src="/todos.js"></script>
-
-
-</body>
-</html>
-
