page todos  hide if not authenticated.

--- a/public/login.html
+++ b/public/login.html
@@ -1,5 +1,5 @@
 <div>
 Name: <input type="text" ng-model="mycl.username"><br>
-E-mail: <input type="text" ng-model="mycl.password"><br>
+password: <input type="password" ng-model="mycl.password"><br>
 <button type="submit" ng-click="mycl.connect();">Login</button>
 </div>
