Pass user from promise to controller when you login.

--- a/public/todos.html
+++ b/public/todos.html
@@ -1,6 +1,6 @@
-<div  >
-
+<div >
     <button type="submit" ng-click="mycl.logout();">logout</button>
+    <h1><span style="color:blue">  welcome {{mycl.user.username}} </span></h1><br>
     <h1>ADD new todo</h1><br>
     title : <input type="text" id="text4" ng-model="mycl.title"><br>
     description: <input type="text" id="text5" ng-model="mycl.description"><br>
