--- a/public/login.html
+++ b/public/login.html
@@ -1,3 +1,10 @@
+<ul class="nav nav-pills">
+
+    <li role="presentation" class="active"><a href="#/login">Login</a></li>
+    <li role="presentation" ><a href="#/todos">Home</a></li>
+    <li role="presentation"><a ng-click="mycl.logout() ;">Logout</a></li>
+
+</ul>
 <div class="row">
     <div class="col-sm-4 col-sm-offset-4">
         <div class="login-panel panel panel-default">
