--- a/public/todos.html
+++ b/public/todos.html
@@ -2,30 +2,39 @@
     <ul class="nav nav-pills">
 
         <li role="presentation"><a href="#/login">Login</a></li>
-        <li role="presentation"><a ng-click="mycl.logout() ;">Logout</a></li>
         <li role="presentation" class="active"><a href="#/todos">Home</a></li>
+        <li role="presentation"><a ng-click="mycl.logout() ;">Logout</a></li>
+
     </ul>
 
     <button type="submit" class="btn btn-default" ng-click=" mycl.setmode('add',''); ">Add todo</button>
     <h2 class="text-center"><span class="label label-info">  welcome {{mycl.user.username}} </span></h2><br>
 
-<div class="row" >
-        <div id="id_alert" class="col-sm-4 col-sm-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Delete todo</h3>
-                </div>
-                <div class="panel-body">
 
 
-        <div  class="alert alert-danger" role="alert">Do you whant de delet the {{mycl.titleup}}  ?
+                    <div id="id_alert" class="row" >
+                        <div  class="col-sm-4 col-sm-offset-4">
+
+        <div class="alert alert-danger" role="alert">Do you whant de delet the {{mycl.titleup}}  ?
 
 
             <br>
             <button class="btn btn-sm btn-danger" type="submit" ng-click="mycl.delete(mycl.idup) ;">Yes</button>
             <button class="btn btn-sm btn-success" ng-click=" mycl.hide_alert(); ">No</button>
         </div>
-    </div> </div> </div> </div>
+
+                        </div> </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
     <div ng-if=" mycl.mode!='' ">
@@ -41,28 +50,34 @@
 
                         <form name="myForm" novalidate>
 
-                            <div class="form-group">
+                            <div class="form-group has-error">
                                 <label>Title</label>
 
 
-                                <input type="text" class="form-control" placeholder="title" name="title"
+                                <input type="text" class="form-control " placeholder="title" name="title"
                                        ng-model="mycl.titleup" ng-minlength="4" ng-maxlength="20"
                                        ng-change=" mycl.errtitle='' " required>
-
-                                <span style="color:red" ng-show="myForm.title.$error.required"> Required!</span>
-                                <span style="color:red" ng-show="myForm.title.$error.minlength">  Too short!</span>
-                                <span style="color:red" ng-show="myForm.title.$error.maxlength"> Too long!</span>
-                                <span style="color:red">{{mycl.errtitle}}</span><br>
+                                <div class=" help-block " >
+                                <span  ng-show="myForm.title.$error.required"> Required!</span>
+                                <span  ng-show="myForm.title.$error.minlength">  Too short!</span>
+                                <span ng-show="myForm.title.$error.maxlength"> Too long!</span>
+                                <span >{{mycl.errtitle}}</span><br>
                             </div>
-                            <div class="form-group">
+                            </div>
+                            <div class="form-group has-error">
                                 <label>Description</label>
                                 <input type="text" class="form-control" placeholder="description" name="description"
                                        ng-maxlength="20" ng-model="mycl.descriptionup"
                                        ng-change=" mycl.errdescription='' "
                                        required>
-                                <span style="color:red" ng-show="myForm.title.$error.required"> Required!</span>
-                                <span style="color:red" ng-show="myForm.description.$error.maxlength">  Too long!</span>
-                                <span style="color:red">{{mycl.errdescription}}</span><br>
+
+                                <div class=" help-block " >
+                                <span ng-show="myForm.description.$error.required"> Required!</span>
+                                <span  ng-show="myForm.description.$error.maxlength">  Too long!</span>
+                                <span >{{mycl.errdescription}}</span>
+                                </div>
+
+                                <br>
                             </div>
                             <div ng-if=" mycl.mode=='update' ">
                                 <label>done :</label><input type="checkbox" ng-model="mycl.doneup"
@@ -115,15 +130,16 @@
                         <td>{{l.done}}</td>
                         <td>
                             <button type="submit" class="btn btn-xs btn-success" ng-click="mycl.done(l._id,l);">
-                                done/doesn't done
+                                <span class="glyphicon glyphicon-ok" aria-hidden="true="></span>
                             </button>
 
                             <button type="submit" class="btn btn-xs btn-warning" ng-click="mycl.setmode('update',l);">
-                                Update
+                                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                             </button>
                             <button type="submit" class="btn btn-xs btn-danger" ng-click="mycl.ready_delete(l._id,l.title);">
-                                Delete
+                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                             </button>
+
                         </td>
 
                     </tr>
