Use one navbar in the file index.

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,11 @@
 
 
 
-
+<ul class="nav nav-pills">
+    <li role="presentation" ><a id="idnavhome" href="#/todos">Home</a></li>
+    <li role="presentation"><a id="idnavlogin" href="#/login">login</a></li>
+    <li role="presentation"><a ng-click="logout();" >logout</a></li>
+</ul>
 <div class="container-fluid" ng-view=""></div>
 
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
