--- a/public/login.html
+++ b/public/login.html
@@ -1,15 +1,9 @@
-<ul class="nav nav-pills">
 
-    <li role="presentation" class="active"><a href="#/login">Login</a></li>
-    <li role="presentation" ><a href="#/todos">Home</a></li>
-    <li role="presentation"><a ng-click="mycl.logout() ;">Logout</a></li>
-
-</ul>
 <div class="row">
     <div class="col-sm-4 col-sm-offset-4">
         <div class="login-panel panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Login</h3>
+                <h3 class="panel-title text-center">Login</h3>
             </div>
             <div class="panel-body">
                 <form novalidate>
