--- a/public/index.html
+++ b/public/index.html
@@ -21,27 +21,17 @@
     <title>Todo Manager</title>
 </head>
 <body>
-
-
-
-
-
 <ul class="nav nav-pills">
-    <li role="presentation" ><a id="idnavhome" href="#/todos">Home</a></li>
-    <li role="presentation"><a id="idnavlogin" href="#/login">login</a></li>
-    <li role="presentation"><a ng-click="logout();" >logout</a></li>
+    <li role="presentation"><a  href="#/todos">Home</a></li>
+    <li role="presentation"><a  ng-if=" !(connected) " href="#/login">login</a></li>
+    <li role="presentation"><a ng-click="logout();" href="#/login" ng-if=" (connected) ">logout</a></li>
 </ul>
 <div class="container-fluid" ng-view=""></div>
-
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
 <script type="text/javascript" src="/todos.js"></script>
-
 <script src="/lib/jquery/dist/jquery.js"></script>
-
-
 <script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.js"></script>
-
 </body>
 </html>
 
