--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,13 @@
     <title>Todo Manager</title>
 </head>
 <body>
-<ul class="nav nav-pills">
-    <li role="presentation"><a  href="#/todos">Home</a></li>
-    <li role="presentation"><a  ng-if=" !(connected) " href="#/login">login</a></li>
-    <li role="presentation"><a ng-click="logout();" href="#/login" ng-if=" (connected) ">logout</a></li>
-</ul>
+<div class="navbar navbar-default navbar-static-top">
+    <div  class="container-fluid">
+        <p class="navbar-text navbar-left"><a  href="#/todos">Home</a></p>
+        <p class="navbar-text navbar-left"><a  ng-if=" !(connected) " href="#/login">login</a></p>
+        <p class="navbar-text navbar-left"><a ng-click="logout();" href="#/login" ng-if=" (connected) ">logout</a></p>
+    </div>
+    </div>
 <div class="container-fluid" ng-view=""></div>
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
