.Add sctructure th the client side

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,11 @@
 <div class="container-fluid" ng-view=""></div>
 <script type="text/javascript" src="/lib/angular/angular.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
-<script type="text/javascript" src="/todos.js"></script>
 <script src="/lib/jquery/dist/jquery.js"></script>
+
+<script type="text/javascript" src="/app.js"></script>
+<script type="text/javascript" src="/todos/todos.js"></script>
+<script type="text/javascript" src="/login/login.js"></script>
 <script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 </html>
