Add routes file and functions folder to the client side.

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
 <script src="/lib/jquery/dist/jquery.js"></script>
 
 <script type="text/javascript" src="/app.js"></script>
+<script type="text/javascript" src="functions/logout.js"></script>
+<script type="text/javascript" src="functions/checkLoggedin.js"></script>
+<script type="text/javascript" src="/routes.js"></script>
 <script type="text/javascript" src="/todos/todos.js"></script>
 <script type="text/javascript" src="/login/login.js"></script>
 <script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.js"></script>
