Add lougoutService for logout and check login  .

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,10 @@
 
 <script type="text/javascript" src="services/logout.js"></script>
 <script type="text/javascript" src="/navbar/navbar.js"></script>
-<script type="text/javascript" src="functions/logout.js"></script>
-<script type="text/javascript" src="functions/checkLoggedin.js"></script>
+<script type="text/javascript" src="/run.js"></script>
+
+
+
 <script type="text/javascript" src="/routes.js"></script>
 <script type="text/javascript" src="/api/todos/todos.js"></script>
 <script type="text/javascript" src="/api/login/login.js"></script>
