Rename lougout service into authservice and delete functions folder.

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,9 @@
 <script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="/app.js"></script>
 
-<script type="text/javascript" src="services/logout.js"></script>
+<script type="text/javascript" src="services/authService.js"></script>
 <script type="text/javascript" src="/navbar/navbar.js"></script>
 <script type="text/javascript" src="/run.js"></script>
-
 
 
 <script type="text/javascript" src="/routes.js"></script>
