Testing title tobe Todo Management.

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <div class="container-fluid">
         <p class="navbar-text navbar-left"><a href="#/todos">Home</a></p>
         <p class="navbar-text navbar-left"><a ng-if=" !(connected) " href="#/login">login</a></p>
-        <p id="idlogout" class="navbar-text navbar-left"><a ng-click="mycl3.logout();" ng-if=" (connected) ">logout</a></p>
+        <p class="navbar-text navbar-left"><a ng-click="mycl3.logout();" ng-if=" (connected) ">logout</a></p>
     </div>
 </div>
 <div class="container-fluid" ng-view=""></div>
